Fixed header and hero clipping

--- a/css/index.scss
+++ b/css/index.scss
@@ -8,14 +8,16 @@ header {
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 1rem 10rem;
+    padding: 1rem 20rem;
     height: 10vh;
-    font-size: 22px;
+    font-size: 25px;
     border-bottom: 2px solid #383838;
 
+    #header-name {
+        font-size: 35px;
+    }
 
     nav {
-        width: 100%;
 
         a {
             color: black;
@@ -31,7 +33,7 @@ header {
 
             li {
                 display: inline-block;
-                margin-right: 1rem;
+                margin-left: 2rem;
             }
         }
     }
@@ -42,49 +44,51 @@ header {
     justify-content: space-between;
     box-sizing: border-box;
     height: 90vh;
-    padding-top: 10rem;
-    padding-right: 20rem;
-    padding-left: 20rem;
+    padding: 10rem 20rem;
 }
 
-.hero-intro {
+.hero-text {
     float: left;
 
-    .hero-name {
-        font-size: 3rem;
-        margin: 0;
+    .hero-intro {
 
-        span {
-            color: #035397;
+        .hero-name {
+            font-size: 3rem;
+            margin: 0;
+    
+            span {
+                color: #035397;
+            }
+        }
+    
+        .hero-title {
+            font-size: 2rem;
+        }
+    
+        .about-me {
+            font-size: 2rem;
         }
     }
 
-    .hero-title {
-        font-size: 2rem;
-    }
-
-    .about-me {
-        font-size: 2rem;
+    .socials {
+        margin-top: 45px;
+        color: #035397;
+    
+        a {
+            margin-right: 1rem;
+            text-decoration: none;
+        }
+    
+        a:visited {
+            color: #035397;
+            font-size: 10em;
+        }
     }
 }
 
 .hero-img {
     width: 400px;
     height: 500px;
-}
-
-.socials {
-    color: #035397;
-
-    a {
-        margin-right: 1rem;
-        text-decoration: none;
-    }
-
-    a:visited {
-        color: #035397;
-        font-size: 10em;
-    }
 }
 
 .projects {
